--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "name": "kanji-master",
   "version": "1.0.0",
+  "author": "Kenneth Korcal <kakorcal@gmail.com>",
+  "repository": "git@github.com:kakorcal/kanji-master.git",
   "license": "MIT",
   "private": true,
   "scripts": {
@@ -51,6 +53,7 @@
     "nodemon": "^1.17.4",
     "postcss-loader": "^2.1.5",
     "prettier": "^1.12.1",
+    "react-hot-loader": "^4.1.3",
     "react-test-renderer": "^16.3.2",
     "style-loader": "^0.21.0",
     "webpack": "^4.8.2",
