--- a/package.json
+++ b/package.json
@@ -14,10 +14,14 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "body-parser": "^1.18.2",
     "cors": "^2.8.4",
     "express": "^4.16.3",
+    "lodash": "^4.17.10",
+    "method-override": "^2.3.10",
     "mongodb": "^3.1.0-beta4",
     "mongoose": "^5.1.0",
+    "morgan": "^1.9.0",
     "normalize.css": "^8.0.0",
     "postcss-preset-env": "^5.0.0",
     "prop-types": "^15.6.1",
