--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "react-hot-loader": "^4.1.3",
     "react-test-renderer": "^16.3.2",
     "style-loader": "^0.21.0",
+    "svg-url-loader": "^2.3.2",
     "webpack": "^4.8.2",
     "webpack-cli": "^2.1.3",
     "webpack-dev-server": "^3.1.4"
