--- a/package.json
+++ b/package.json
@@ -28,7 +28,10 @@
     "react": "^16.3.2",
     "react-addons-perf": "^15.4.2",
     "react-dom": "^16.3.2",
-    "react-router-dom": "^4.2.2"
+    "react-router-dom": "^4.2.2",
+    "stylelint": "^9.2.0",
+    "stylelint-no-unsupported-browser-features": "^3.0.0",
+    "swipejs": "^2.2.11"
   },
   "devDependencies": {
     "babel-core": "^6.26.3",
@@ -48,6 +51,7 @@
     "eslint-config-prettier": "^2.9.0",
     "eslint-config-react": "^1.1.7",
     "eslint-loader": "^2.0.0",
+    "eslint-plugin-compat": "^2.2.0",
     "eslint-plugin-import": "^2.11.0",
     "eslint-plugin-jsx-a11y": "^6.0.3",
     "eslint-plugin-prettier": "^2.6.0",
@@ -62,6 +66,7 @@
     "react-hot-loader": "^4.1.3",
     "react-test-renderer": "^16.3.2",
     "style-loader": "^0.21.0",
+    "stylelint-config-recommended": "^2.1.0",
     "svg-url-loader": "^2.3.2",
     "webpack": "^4.8.2",
     "webpack-cli": "^2.1.3",
