--- a/.stylelintrc
+++ b/.stylelintrc
@@ -1,5 +1,6 @@
 {
   'extends': 'stylelint-config-recommended',
+  'ignoreFiles': ['**/node_modules'],
   'plugins': ['stylelint-no-unsupported-browser-features'],
     'rules': {
       'plugin/no-unsupported-browser-features': [
