--- a/package.json
+++ b/package.json
@@ -13,6 +13,10 @@
     "api": "NODE_ENV=development nodemon server/app.js"
   },
   "dependencies": {
+    "@fortawesome/fontawesome": "^1.1.8",
+    "@fortawesome/fontawesome-free-brands": "^5.0.13",
+    "@fortawesome/fontawesome-free-solid": "^5.0.13",
+    "@fortawesome/react-fontawesome": "^0.0.19",
     "axios": "^0.18.0",
     "body-parser": "^1.18.2",
     "cors": "^2.8.4",
@@ -30,7 +34,6 @@
     "react-dom": "^16.3.2",
     "react-router-dom": "^4.2.2",
     "stylelint": "^9.2.0",
-    "stylelint-no-unsupported-browser-features": "^3.0.0",
     "swipejs": "^2.2.11"
   },
   "devDependencies": {
@@ -67,6 +70,8 @@
     "react-test-renderer": "^16.3.2",
     "style-loader": "^0.21.0",
     "stylelint-config-recommended": "^2.1.0",
+    "stylelint-config-standard": "^18.2.0",
+    "stylelint-no-unsupported-browser-features": "^3.0.0",
     "svg-url-loader": "^2.3.2",
     "webpack": "^4.8.2",
     "webpack-cli": "^2.1.3",
