adding base and landing styles, update eslint and stylelint

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -19,6 +19,13 @@
     "BASE_API_URL": true
   },
   "rules": {
+    "jsx-a11y/anchor-is-valid": [
+      "error",
+      {
+        "components": ["Link"],
+        "specialLink": ["to"]
+      }
+    ],
     "compat/compat": "error"
   }
 }
