--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "mongoose": "^5.1.0",
     "morgan": "^1.9.0",
     "normalize.css": "^8.0.0",
+    "postcss-cssnext": "^3.1.0",
     "postcss-preset-env": "^5.0.0",
     "prop-types": "^15.6.1",
     "react": "^16.3.2",
