--- a/.babelrc
+++ b/.babelrc
@@ -5,7 +5,7 @@
       "env",
       {
         "targets": {
-          "browsers": "last 2 versions"
+          "browsers": "defaults"
         },
         "loose": false,
         "modules": false
