--- a/package.json
+++ b/package.json
@@ -27,8 +27,11 @@
     "mongoose": "^5.1.0",
     "morgan": "^1.9.0",
     "normalize.css": "^8.0.0",
+    "postcss-browser-reporter": "^0.5.0",
     "postcss-cssnext": "^3.1.0",
+    "postcss-import": "^11.1.0",
     "postcss-preset-env": "^5.0.0",
+    "postcss-url": "^7.3.2",
     "prop-types": "^15.6.1",
     "react": "^16.3.2",
     "react-addons-perf": "^15.4.2",
@@ -77,5 +80,8 @@
     "webpack": "^4.8.2",
     "webpack-cli": "^2.1.3",
     "webpack-dev-server": "^3.1.4"
+  },
+  "peerDependencies": {
+    "caniuse-lite": "^1.0.30000697"
   }
 }
